# meps-text-mining

./: .gitignore  Brando Benifei.cvs  MPs.ipynb  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: meps_be.csv  meps_es.csv  meps_it.csv  meps_meta.json  summaries.json
data/country_meps/: meps_de.csv  meps_fr.csv  meps_test.csv
data/meps_plenary_speeches/: Achille VARIATI.csv  Alessandra BASSO.csv  Alessandra MORETTI.csv  Alessandra MUSSOLINI.csv  Alessandro PANZA.csv  Alexandra GEESE.csv  Andrea COZZOLINO.csv  Andreas GLÜCK.csv  Andreas SCHWAB.csv  André ROUGÉ.csv  Angelika NIEBLER.csv  Angelo CIOCCA.csv  Anna BONFRISCO.csv  Anna CAVAZZINI.csv  Anna DEPARNAY-GRUNENBERG.csv  Annalisa TARDINO.csv  Anne SANDER.csv  Anne-Sophie PELLETIER.csv  Annika BRUNA.csv  Antonio Maria RINALDI.csv  Assita KANKO.csv  Aurore LALUCQ.csv  Aurélia BEIGNEUX.csv  Axel VOSS.csv  Beatrice COVASSI.csv  Benoît BITEAU.csv  Benoît LUTGEN.csv  Bernard GUETTA.csv  Bernd LANGE.csv  Bernhard ZIMNIOK.csv  Birgit SIPPEL.csv  Brando BENIFEI.csv  Camilla LAURETI.csv  Carlo FIDANZA.csv  Caroline ROOSE.csv  Caterina CHINNICI.csv  Catherine AMALRIC.csv  (+223 more)
notebooks/: 01.list_of_meps.ipynb  02.scrape_meps_speeches.ipynb  03.consolidate_meps_speeches.ipynb  04.translate_meps_speeches.ipynb  05.query_meps_speeches.ipynb  05.query_meps_speeches_rag.ipynb  06.summarize_meps_speeches.ipynb  L1-Advanced_RAG_Pipeline.ipynb  list_of_meps.ipynb  meps_analytics.ipynb  scrape_meps_speeches.ipynb
src/: gradio_interface.py  scrape_list_of_meps.py  scrape_meps_speeches.py  utils.py
(+72 files in other folders)
